maintain java 8 compatibility